Fix text alignment for error preview

--- a/src/modal-dialog-src/modal-dialog.css
+++ b/src/modal-dialog-src/modal-dialog.css
@@ -89,6 +89,7 @@ body::-webkit-scrollbar-thumb,
 }
 
 .markdown-body details,
+.markdown-body pre,
 .markdown-body p {
   text-align: left;
 }
